--- a/Hello World/hello-world/package.json
+++ b/Hello World/hello-world/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "crash-course",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
